WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110889
REGRESSION (
r134631
) of border-radius percentage with border pixel
https://bugs.webkit.org/show_bug.cgi?id=110889
Summary
REGRESSION (r134631) of border-radius percentage with border pixel
Jeff Macey
Reported
2013-02-26 09:35:21 PST
Created
attachment 190308
[details]
HTML usecase showing the regression Changeset 134631 for
bug 101974
broke the ability to use a percentage-based border-radius with a defined border in pixels. Sample CSS showcasing: p{ border-radius:50% 50% 0 0 / 100%; border:1px solid #000; }
Attachments
HTML usecase showing the regression
(681 bytes, text/html)
2013-02-26 09:35 PST
,
Jeff Macey
no flags
Details
Windows Chromium rev168098 showing previous rendering
(21.97 KB, image/png)
2013-02-26 09:36 PST
,
Jeff Macey
no flags
Details
Windows Chromium rev168117 showing incorrect rendering
(17.80 KB, image/png)
2013-02-26 09:36 PST
,
Jeff Macey
no flags
Details
Linux Chromium rev168105 showing previous rendering
(25.37 KB, image/png)
2013-02-26 09:37 PST
,
Jeff Macey
no flags
Details
Linux Chromium rev168117 showing incorrect rendering
(21.67 KB, image/png)
2013-02-26 09:37 PST
,
Jeff Macey
no flags
Details
Patch
(29.09 KB, patch)
2013-02-26 14:20 PST
,
Justin Novosad
no flags
Details
Formatted Diff
Diff
Patch for landing
(28.72 KB, patch)
2013-02-27 08:27 PST
,
Justin Novosad
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeff Macey
Comment 1
2013-02-26 09:36:05 PST
Created
attachment 190309
[details]
Windows Chromium rev168098 showing previous rendering
Jeff Macey
Comment 2
2013-02-26 09:36:44 PST
Created
attachment 190310
[details]
Windows Chromium rev168117 showing incorrect rendering
Jeff Macey
Comment 3
2013-02-26 09:37:19 PST
Created
attachment 190311
[details]
Linux Chromium rev168105 showing previous rendering
Jeff Macey
Comment 4
2013-02-26 09:37:51 PST
Created
attachment 190313
[details]
Linux Chromium rev168117 showing incorrect rendering
Justin Novosad
Comment 5
2013-02-26 14:20:25 PST
Created
attachment 190360
[details]
Patch
Simon Fraser (smfr)
Comment 6
2013-02-26 14:35:56 PST
Comment on
attachment 190360
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=190360&action=review
> LayoutTests/platform/chromium/TestExpectations:1904 > +# New test in need of pixel baselines > +
webkit.org/b/110889
fast/borders/border-radius-percent.html [ ImageOnlyFailure Pass Failure ]
What about TestExpectations on other platforms?
WebKit Review Bot
Comment 7
2013-02-26 15:22:36 PST
Attachment 190360
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/borders/border-radius-percent-expected.txt', u'LayoutTests/fast/borders/border-radius-percent.html', u'LayoutTests/platform/chromium-linux/fast/borders/border-radius-percent-expected.png', u'LayoutTests/platform/chromium/TestExpectations', u'Source/WebCore/ChangeLog', u'Source/WebCore/rendering/RenderBoxModelObject.cpp']" exit_code: 1 LayoutTests/platform/chromium-linux/fast/borders/border-radius-percent-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Justin Novosad
Comment 8
2013-02-27 08:27:10 PST
Created
attachment 190527
[details]
Patch for landing
WebKit Review Bot
Comment 9
2013-02-27 08:49:58 PST
Comment on
attachment 190527
[details]
Patch for landing Clearing flags on attachment: 190527 Committed
r144196
: <
http://trac.webkit.org/changeset/144196
>
WebKit Review Bot
Comment 10
2013-02-27 08:50:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug