REGRESSION (r134631) of border-radius percentage with border pixel https://bugs.webkit.org/show_bug.cgi?id=110889

Reviewed by Simon Fraser.

Source/WebCore:

Fixing background color filling to handle "non renderable" rounded
rectangles.

Test: fast/borders/border-radius-percent.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintFillLayerExtended):

LayoutTests:

Adding new pixel test to verify the correct rendering of
rounded rectangle backgrounds with inner border radii that
exceed the dimensions of the inner edge of the border.

* fast/borders/border-radius-percent-expected.txt: Added.
* fast/borders/border-radius-percent.html: Added.
* platform/chromium-linux/fast/borders/border-radius-percent-expected.png: Added.
* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/129284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144196 268f45cc-cd09-0410-ab3c-d52691b4dbfc